service.yml
apiVersion: v1
kind: Service
metadata:
  name: gcpdemo
  labels:
    name: gcpdemo
spec:
  selector:
    app: gcpdemo
  ports:
    - port: 80
      targetPort: 9080
      protocol: TCP
  type: LoadBalancer
