ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gcpdemo-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: gcpdemo
              servicePort: 80
